# minisat

./: CMakeLists.txt
minisat/core/: ForgetStrategy.cc  ForgetStrategy.h  LiteralSelectionStrategy.cc  LiteralSelectionStrategy.h  Main.cc  PolarityStrategy.h  PolarityStrategyFull.cc  PolarityStrategyFull.h  PolarityStrategyLimited.cc  PolarityStrategyLimited.h  PolarityStrategyNone.cc  PolarityStrategyNone.h  PolarityStrategyRandom.cc  PolarityStrategyRandom.h  Random.cc  Random.h  RestartStrategy.cc  RestartStrategy.h  Solver.cc  Solver.h  SolverListener.h  SolverStatistics.cc  SolverStatistics.h
minisat/test/: refactor_test.cpp  simple_test.cpp
minisat/test/samples/: test1.cnf.answers.txt  test2.cnf.answers.txt  test3.cnf.answers.txt  test4.cnf.answers.txt  test5.cnf.answers.txt  test6.cnf.answers.txt  test7.cnf.answers.txt  test8.cnf.answers.txt  unif-r4.25-v400-c1700-05-S1956245623.used-as.sat04-35.cnf
minisat/utils/: System.cc
